@@ -1,3 +1,5 @@
+import org.jetbrains.kotlin.konan.file.File.Companion.javaHome
+
 plugins {
     kotlin("multiplatform") version "1.5.0"
     //id("com.android.application")
@@ -12,11 +14,7 @@ repositories {
 }
 
 kotlin {
-    jvm {
-        compilations.all {
-            kotlinOptions.jvmTarget = "1.8"
-        }
-    }
+    jvm()
 
     js {
         browser {
@@ -35,7 +33,7 @@ kotlin {
     sourceSets {
         val commonMain by getting {
             dependencies {
-                implementation("app.thelema:thelema-engine:0.6.0")
+                implementation("app.thelema:thelema:0.6.0")
             }
         }
 
@@ -47,25 +45,54 @@ kotlin {
 
         val jvmMain by getting {
             dependencies {
-                implementation("app.thelema:thelema-engine-jvm:0.6.0")
+                implementation("app.thelema:thelema-jvm:0.6.0")
+                implementation(files("libs/ogg-jvm-lib-0.1.0.jar"))
             }
 
-            val jvmJar by tasks.getting(Jar::class) {
-                doFirst {
-                    manifest {
-                        attributes(
-                            "Main-Class" to "com.kotme.MainKt"
-                        )
-                    }
+            val jvmJar by tasks.getting(Jar::class)
 
-                    from(configurations.getByName("jvmRuntimeClasspath").map { if (it.isDirectory) it else zipTree(it) })
+            val jarsDir = "$buildDir/jars"
+
+            val copyJars by tasks.registering(Copy::class) {
+                dependsOn(jvmJar)
+                delete(jarsDir)
+                val files = files(jvmJar) + configurations.getByName("jvmRuntimeClasspath")
+                from(files)
+                into(jarsDir)
+            }
+            
+            // wix toolset is required: https://wixtoolset.org/
+            // .net framework 3.5 is required for wix toolset
+            val jpackage by tasks.registering(Exec::class) {
+                dependsOn(copyJars)
+                doFirst {
+                    commandLine("C:\\Program Files\\Java\\jdk-16.0.1\\bin\\jpackage",
+                        "--type", "\"msi\"",
+                        "--input", jarsDir,
+                        "--name", "KOTme",
+                        "--main-jar", "kotme-jvm.jar",
+                        "--main-class", "com.kotme.MainKt",
+                        "--java-options", "--enable-preview",
+                        "--dest", "$buildDir/jpackage",
+                        "--win-dir-chooser",
+                        "--win-shortcut"
+                    )
                 }
+
+/*
+jpackage --input target/ \
+--name JPackageDemoApp \
+--main-jar JPackageDemoApp.jar \
+--main-class com.baeldung.java14.jpackagedemoapp.JPackageDemoApp \
+--type dmg \
+--java-options '--enable-preview'
+*/
             }
         }
 
         val jsMain by getting {
             dependencies {
-                implementation("app.thelema:thelema-engine-js:0.6.0")
+                implementation("app.thelema:thelema-js:0.6.0")
             }
         }
     }
